...
*/

// MARK: - Common

"common.ok" = "OK";
"common.cancel" = "Cancel";
"common.done" = "Done";
"common.save" = "Save";
"common.delete" = "Delete";
"common.edit" = "Edit";
"common.close" = "Close";
"common.back" = "Back";
"common.next" = "Next";
...
